add en-point path, change sw-docs
